--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 .hidden {
     display :none;
 }
+
+body {
+    display:flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#greeting {
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 30px;
+}
+
+#quotes, #weather {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin:15px;
+}
